Add CRUD functionalities

--- a/public/documentation.html
+++ b/public/documentation.html
@@ -66,11 +66,11 @@
             <td>A text message indicating whether the movie was successfully removed</td>
         </tr>
         <tr>
-            <td>Update a movie genre in certain title</td>
-            <td>/movies/[Title]/[Genre]/[Type]</td>
+            <td>Update a movie by ID</td>
+            <td>/movies/[Title]/[ID]</td>
             <td>PUT</td>
             <td>None</td>
-            <td>A text message indicating the title genre, and type that was updated</td>
+            <td>A text message indicating the movie, title and genre was updated</td>
         </tr>
         <tr>
             <td>Get the genres of the movie</td>
